@@ -4,6 +4,9 @@ cdebconf (0.49) UNRELEASED; urgency=low
     - Update French translation.
   * Safir Secerovic, Amila Akagic
     - Add Bosnian translation (bs.po).
+  * Alastair McKinstry
+    - Change CMDSTATUS_BADPARAM code to 15, to disabiguate.
+    - Add enum for command status codes to debconfclient.h
 
  -- Pierre Machard <pmachard@debian.org>  Sat,  1 Nov 2003 11:54:54 +0100
 
